# darling-coregraphics

./: CMakeLists.txt
Headers/CoreGraphics/: CGBase.h  CGEvent.h  CGGeometry.h  CoreGraphics.h
Headers/Native/: cairo  fontconfig  freetype2_x64  jconfig.h  jerror.h  jmorecfg.h  jpeglib.h  png.h  pngconf.h  tiff.h  tiffconf.h  tiffio.h  tiffvers.h
